# xbox-live-api

./: .gitignore  .gitmodules  CONTRIBUTING.md  Custom.props  Directory.Packages.props  LICENSE.md  LINKTOSOURCE.md  Microsoft.Xbox.Services.GDK.VS2017.sln  Microsoft.Xbox.Services.GDK.VS2019.sln  Microsoft.Xbox.Services.GDK.VS2022.sln  NuGet.config  README.md  ThirdPartyNotices.txt  hc_settings.props  nuget.config  signConfig.xml  xdk.extcomp  xsapi.paths.props  xsapi.staticlib.props
Include/cpprestinclude/: cpprestsdk_impl.h
Include/cpprestsdk/: cpprestsdk_impl.h
Include/web/: http_msg.h  json.h  uri.h
Include/xsapi/: achievements.h  clubs.h  contextual_search_service.h  entertainment_profile.h  errors.h  events.h  game_server_platform.h  http_call.h  http_call_request_message.h  leaderboard.h  marketplace.h  matchmaking.h  mem.h  multiplayer.h  multiplayer_manager.h  notification_helper.h  player_state_writer.h  presence.h  privacy.h  profile.h  real_time_activity.h  service_call_logging_config.h  services.h  simple_stats.h  social.h  social_manager.h  stats_manager.h  system.h  title_callable_ui.h  title_storage.h  tournaments.h  types.h  user_statistics.h  xbox_cll.h  xbox_live_app_config.h  xbox_live_callback.h  xbox_live_context.h  xbox_live_context_settings.h  xbox_service_call_routed_event_args.h
Include/xsapi-c/: achievements_c.h  achievements_manager_c.h  errors_c.h  events_c.h  game_invite_c.h  http_call_c.h  leaderboard_c.h  matchmaking_c.h  multiplayer_activity_c.h  multiplayer_c.h  multiplayer_manager_c.h  notification_c.h  pal.h  platform_c.h  presence_c.h  privacy_c.h  profile_c.h  real_time_activity_c.h  services_c.h  social_c.h  social_manager_c.h  stats_manager_c.h  string_verify_c.h  system_c.h  title_callable_ui_c.h  title_managed_statistics_c.h  title_storage_c.h  types_c.h  user_statistics_c.h  xbox_live_app_config_c.h  xbox_live_context_c.h  xbox_live_context_settings_c.h  xbox_live_global_c.h
Include/xsapi-cpp/: achievements.h  errors.h  events.h  http_call.h  http_call_request_message.h  leaderboard.h  matchmaking.h  mem.h  multiplayer.h  multiplayer_manager.h  notification_helper.h  notification_service.h  presence.h  privacy.h  profile.h  real_time_activity.h  service_call_logging_config.h  services.h  social.h  social_manager.h  string_verify.h  system.h  title_callable_ui.h  title_storage.h  types.h  user_statistics.h  xbox_live_app_config.h  xbox_live_context.h  xbox_live_context_settings.h  xbox_service_call_routed_event_args.h
Source/Shared/: async_helpers.cpp  async_helpers.h  build_version.h  call_buffer_timer.cpp  call_buffer_timer.h  enum_traits.h  errors.cpp  errors_legacy.h  fault_injection.cpp  fault_injection.h  global_state.cpp  global_state.h  http_call_api.cpp  http_call_impl.cpp  http_call_impl.h  http_call_legacy.cpp  http_call_legacy.h  http_call_request_message.cpp  http_call_request_message_internal.h  http_call_response.cpp  http_call_response.h  http_call_response_internal.h  http_call_wrapper_internal.cpp  http_call_wrapper_internal.h  http_client.cpp  http_client.h  http_headers.h  http_utils.cpp  http_utils.h  initiator.cpp  initiator.h  internal_errors.h  internal_mem.cpp  internal_mem.h  internal_types.h  local_config.cpp  local_config.h  mem.cpp  perf_tester.h  public_utils_legacy.cpp  (+54 more)
Source/System/: auth_config.cpp  auth_config.h  client_operation.h  local_storage.cpp  local_storage.h  platform_api.cpp  ppltasks_extra.h  ppltasks_extra_unix.h  system_internal.h  token_and_signature_result.cpp  user.cpp  user_impl.cpp  user_impl.h  user_impl_idp.cpp  user_impl_ios.h  user_impl_ios.mm  user_impl_server.cpp  user_ios.mm  xbox_live_mutex.cpp
Tests/ApiExplorer/: APIExplorer.Shared.vcxitems  APIExplorer.Shared.vcxitems.filters
Tests/LongHaulTestApp/: AchievementsIntegration.cpp  App.cpp  App.h  AsyncIntegration.cpp  AsyncIntegration.h  LongHaulTestApp.sln  LongHaulTestApp.vcxproj  LongHaulTestApp.vcxproj.filters  Package.appxmanifest  ProfileIntegration.cpp  SignInIntegration.cpp  SocialIntegrations.cpp  SocialManagerIntegration.cpp  TestFramework.cpp  Tests.h  TestsManager.cpp  pch.h
Utilities/CMake/: .gitignore  CMakeLists.txt  GetAndroidXSAPISourceFiles.cmake  GetCommonXSAPISourceFiles.cmake  MakeProjects.cmd  template-Microsoft.Xbox.Services.110.XDK.Cpp.vcxproj  template-Microsoft.Xbox.Services.110.XDK.WinRT.vcxproj  template-Microsoft.Xbox.Services.140.Android.vcxproj  template-Microsoft.Xbox.Services.140.UWP.Cpp.vcxproj  template-Microsoft.Xbox.Services.140.UWP.WinRT.vcxproj  template-Microsoft.Xbox.Services.140.Win32.Cpp.vcxproj  template-Microsoft.Xbox.Services.140.XDK.Cpp.vcxproj  template-Microsoft.Xbox.Services.140.XDK.WinRT.vcxproj  template-Microsoft.Xbox.Services.141.Android.vcxproj  template-Microsoft.Xbox.Services.141.GDK.C.vcxproj  template-Microsoft.Xbox.Services.141.UWP.Cpp.vcxproj  template-Microsoft.Xbox.Services.141.Win32.Cpp.vcxproj  template-Microsoft.Xbox.Services.141.XDK.Cpp.vcxproj  template-Microsoft.Xbox.Services.141.XDK.WinRT.vcxproj  template-Microsoft.Xbox.Services.142.GDK.C.vcxproj  template-Microsoft.Xbox.Services.142.UWP.Cpp.vcxproj  template-Microsoft.Xbox.Services.142.Win32.Cpp.vcxproj  template-Microsoft.Xbox.Services.142.XDK.Cpp.vcxproj  template-Microsoft.Xbox.Services.UnitTest.140.TAEF.vcxproj  template-Microsoft.Xbox.Services.UnitTest.140.TE.vcxproj  template-Microsoft.Xbox.Services.UnitTest.141.TAEF.vcxproj  template-Microsoft.Xbox.Services.UnitTest.141.TE.vcxproj  template-Microsoft.Xbox.Services.UnitTest.142.TAEF.vcxproj  template-Microsoft.Xbox.Services.UnitTest.142.TE.vcxproj
Utilities/CMake/Android/: CMakeLists.txt  GetXSAPIFlags.cmake
Utilities/CMake/ProjectFileProcessor/: Program.cs  ProjectFileProcessor.csproj  ProjectFileProcessor.sln
Utilities/CMake/ProjectFileProcessor/Properties/: AssemblyInfo.cs
Utilities/CMake/scripts/: CopyBuildFiles.cmd  DiffProjects.cmd  GenerateAndDiff.cmd  RunCMake.cmd
Utilities/Docs/: DoxygenLayout.xml  quality-override.txt
Utilities/GDK/: Xbox.Services.API.C.props
Utilities/IDXboxUnityAssetLayout/: .gitignore
(+2670 files in other folders)
